--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=1234
+server.port=8080
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url= jdbc:postgresql://localhost:5432/pedido
@@ -6,3 +6,14 @@ spring.datasource.username=user
 spring.datasource.password=teste123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.generate-ddl=false
+
+spring.jpa.show-sql=true
+
+spring.jackson.serialization.write-dates-as-timestamps=false
+
+spring.jackson.date-format=yyyy-MM-dd
+
+# wariing org.postgresql.jdbc.PgConnection.createClob() ainda não foi implementado
+#https://pt.stackoverflow.com/questions/280034/erro-java-sql-sqlfeaturenotsupportedexception-m%C3%A9todo-org-postgresql-jdbc-pgconn
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
