--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<version>9.4-1200-jdbc4</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- suporte JPA p/ LocalDate  -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
